# advent-of-code

./: README.md  challenge_utils.py  run  run.py  test_utils.py  utils.py
2015/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  1.py  10.py  11.py  12.py  3.py  run  test_2015.py
2016/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  1.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.py  19.py  2.py  20.py  21.py  22.py  23.py  24.py  25.py  3.py  4.py  5.py  6.py  7.py  8.py  9.py  run  test.py  test_2016.py  test_utils.py  utils.py
2017/: 01.py  02.py  03.py  04.py  (+7 more)
rust/: .gitattributes  Cargo.toml  Justfile  README.md  template.rs
rust/src/: aoc.rs  main.rs  progress.rs  runner.rs
rust/src/aoc/: Cargo.toml
rust/src/aoc/src/: lib.rs  progress.rs  runner.rs
rust/src/prelude/: Cargo.toml
rust/src/prelude/src/: lib.rs
rust/src/runner/: Cargo.toml
rust/src/runner/src/: main.rs  progress.rs  runner.rs
rust/src/utils/: Cargo.toml  geometry.rs  inputs.rs  mod.rs  vecs.rs
rust/src/utils/src/: ascii_ocr.rs  hacks.rs  hash.rs  heap.rs  inputs.rs  iters.rs  lib.rs  search.rs  vecs.rs
rust/src/utils/src/geometry/d2/: coordinates.rs  grid.rs  map.rs  mod.rs  shapes.rs  vecs.rs
rust/src/utils/src/inputs/: grid.rs  mod.rs  numbers.rs  regex.rs  text.rs
rust/src/utils/src/iters/: take_until.rs
rust/src/utils/src/search/: astar.rs  backtrace.rs  djikstra.rs
rust/src/y2015/: Cargo.toml  d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  mod.rs
rust/src/y2015/src/: 13.rs  d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  lib.rs  main.rs
rust/src/y2016/: Cargo.toml  d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  mod.rs
rust/src/y2016/src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  lib.rs  main.rs
rust/src/y2017/: Cargo.toml  d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d08.rs  mod.rs
rust/src/y2017/src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  lib.rs  main.rs
rust/src/y2018/: Cargo.toml  d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  mod.rs
rust/src/y2018/src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  lib.rs  main.rs
rust/src/y2019/: Cargo.toml  d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  mod.rs
rust/src/y2019/src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  lib.rs  main.rs
rust/src/y2020/: Cargo.toml  d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  mod.rs
rust/src/y2020/src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  d16.rs  d17.rs  d18.rs  d19.rs  d20.rs  d21.rs  d22.rs  d23.rs  d24.rs  d25.rs  lib.rs  main.rs
rust/src/y2021/: Cargo.toml  d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  mod.rs
rust/src/y2021/src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  lib.rs  main.rs
rust/src/y2022/: Cargo.toml
rust/src/y2022/src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  lib.rs  main.rs
rust/src/y2023/: Cargo.toml
rust/src/y2023/src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  lib.rs  main.rs
rust/src/y2024/: Cargo.toml
rust/src/y2024/src/: d01.rs  d02.rs  d03.rs  d04.rs  d05.rs  d06.rs  d07.rs  d08.rs  d09.rs  d10.rs  d11.rs  d12.rs  d13.rs  d14.rs  d15.rs  main.rs
rust/src/y2025/: Cargo.toml
rust/src/y2025/src/: main.rs
(+89 files in other folders)
