[workspace]
members = [
    "src/*"
]

resolver = "2"

[workspace.package]
version = "1.0.0"
edition = "2021"

[workspace.dependencies]
console = "0.15.2"
fancy-regex = "0.12.0"
itertools = "0.13.0"
md5 = "0.7.0"
serde_json = "1.0.87"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }

module_name_repetitions = "allow"
struct_field_names = "allow"
missing_const_for_fn = "allow"
must_use_candidate = "allow"
unreadable_literal = "allow"
missing_panics_doc = "allow"
redundant_closure = "allow"
redundant_closure_for_method_calls = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"

enum_glob_use = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"

[profile.release]
debug = 1
incremental = true
