[package]
name = "runner"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
console = { workspace = true }
ctrlc = { workspace = true }

aoc = { "path" = "../aoc" }
y2015 = { "path" = "../y2015" }
y2016 = { "path" = "../y2016" }
y2017 = { "path" = "../y2017" }
y2018 = { "path" = "../y2018" }
y2019 = { "path" = "../y2019" }
y2020 = { "path" = "../y2020" }
y2021 = { "path" = "../y2021" }
y2022 = { "path" = "../y2022" }
y2023 = { "path" = "../y2023" }
