[package]
name = "y2021"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.44"
console = "0.15.2"
ctrlc = { version = "3.1.9", features = ["termination"] }
dialoguer = "0.10.2"
fancy-regex = "0.10.0"
indicatif = "0.17.1"
itertools = "0.10.5"

aoc = { "path" = "../aoc" }
utils = { "path" = "../utils" }